revision: for {e8bf599d3613}
This adds sha256 and sha512 hashing

Signed-off-by: Daniel P. Smith <dpsmith@apertussolutions.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -1972,6 +1972,22 @@ config SECURE_LAUNCH
 	  of all the modules and configuration information used for
 	  boooting the operating system.
 
+config SECURE_LAUNCH_SHA256
+	bool "Secure Launch TPM2 SHA256"
+	default y
+	depends on SECURE_LAUNCH
+	help
+	  When using Secure Launch and TPM2 is present, use SHA256 hash
+	  algorithm for measurements.
+
+config SECURE_LAUNCH_SHA512
+	bool "Secure Launch TPM2 SHA512"
+	default n
+	depends on SECURE_LAUNCH && !SECURE_LAUNCH_SHA256
+	help
+	  When using Secure Launch and TPM2 is present, use SHA512 hash
+	  algorithm for measurements.
+
 config SECCOMP
 	def_bool y
 	prompt "Enable seccomp to safely compute untrusted bytecode"
